Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19834

memcached unit tests segv on centos7

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      The memcached unit tests have been failing on Centos7 for some time (a couple of months at least). Since the docker env has been somewhat touch and go for running tests, I didn't really know if this was env related.

      But it looks like a real issue. The problem is only on centos7 (don't know if it happens on centos6 – centos6 by default has python 2.6 and I think we need python 2.7 for running our unit tests)

      I have a VM environment where it was repro-ed.

      The segv seems to be from memcached_testapp. Here's the stack:

      #0  0x00007fdd2e5a8e61 in pthread_join () from /lib64/libpthread.so.0
      #1  0x00007fdd2f223b86 in terminate_consumer_thread (this=0x7fdd2f435460 <audit>) at /home/couchbase/memcached/auditd/src/audit.cc:521
      #2  Audit::clean_up (this=this@entry=0x7fdd2f435460 <audit>) at /home/couchbase/memcached/auditd/src/audit.cc:542
      #3  0x00007fdd2f22c2d4 in Audit::~Audit (this=0x7fdd2f435460 <audit>, __in_chrg=<optimized out>) at /home/couchbase/memcached/auditd/src/audit.h:72
      #4  0x00007fdd2d7ef1da in __cxa_finalize () from /lib64/libc.so.6
      #5  0x00007fdd2f2228b3 in __do_global_dtors_aux () from /home/couchbase/build/memcached/libauditd.so.0.1.0
      #6  0x00007fff75674480 in ?? ()
      #7  0x00007fdd30913a1a in _dl_fini () from /lib64/ld-linux-x86-64.so.2
      

      Attachments

        Issue Links

          Activity

            People

              trond Trond Norbye
              hari.kodungallur hari kodungallur (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty