MB-19834: fix sigsegv on CentOS7

The audit destructor (of the global instance) tried to pthread_join
an uninitialized pthread id.

This patch applies the same fix as we've added for trunk for
MB-19957 (which was filed when I saw this as infinite hang on
windows)

Change-Id: I2267b47494d975f75174473db9f9964dcafa9794
Reviewed-on: http://review.couchbase.org/65001
Reviewed-by: Dave Rigby <daver@couchbase.com>
Well-Formed: buildbot <build@couchbase.com>
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Will Gardner <will.gardner@couchbase.com>